Fix cropped list in cart

--- a/style/cart.css
+++ b/style/cart.css
@@ -63,7 +63,8 @@ textarea {
         padding: 0 !important;
     }
     .cart-product-list{
-        width: 80% !important;
+        padding-top: 150px !important;
+        width: 75% !important;
         margin: auto !important;
         margin-bottom: 20px;
     }
